// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute crypto endpoint should return success 1`] = `
Object {
  "data": Object {
    "result": 1354.22386957,
  },
  "result": 1354.22386957,
  "statusCode": 200,
  "timestamps": Object {
    "providerDataReceived": 1641035471111,
    "providerDataRequested": 1641035471111,
  },
}
`;

exports[`execute filtered endpoint should return success 1`] = `
Object {
  "data": Object {
    "result": 77.77,
  },
  "result": 77.77,
  "statusCode": 200,
  "timestamps": Object {
    "providerDataReceived": 1641035471111,
    "providerDataRequested": 1641035471111,
  },
}
`;

exports[`execute globalmarketcap endpoint should return success 1`] = `
Object {
  "data": Object {
    "result": 2810702841731,
  },
  "result": 2810702841731,
  "statusCode": 200,
  "timestamps": Object {
    "providerDataReceived": 1641035471111,
    "providerDataRequested": 1641035471111,
  },
}
`;

exports[`execute marketcap endpoint should return success 1`] = `
Object {
  "data": Object {
    "result": 1014798653606,
  },
  "result": 1014798653606,
  "statusCode": 200,
  "timestamps": Object {
    "providerDataReceived": 1641035471111,
    "providerDataRequested": 1641035471111,
  },
}
`;

exports[`execute volume endpoint should return success 1`] = `
Object {
  "data": Object {
    "result": 59672098927.86,
  },
  "result": 59672098927.86,
  "statusCode": 200,
  "timestamps": Object {
    "providerDataReceived": 1641035471111,
    "providerDataRequested": 1641035471111,
  },
}
`;
